// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dateInput > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Label
      </label>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
      >
        *
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
    >
      Label
    </label>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with htmlFor 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div>
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="id"
        id="id-label"
      >
        Label
      </label>
      <input
        data-testid="test-input"
        id="id"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with label description (ReactNode) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Label
      </label>
      <div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`dateInput > renders correctly with label description (string) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: auto; --_4k0ekn1: none; --_4k0ekn2: auto;"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        Label
      </label>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
      >
        test
      </span>
    </div>
  </div>
</DocumentFragment>
`;
